# HID-cpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bitspan.hpp  capped_array.hpp
src/hid/: application.hpp  descriptor_view.hpp  driver.hpp  hid.cpp  hid.hpp  parser.cpp  parser.hpp  proxy.cpp  proxy.hpp  report.hpp  report_descriptor.hpp  root_driver.hpp  usage.hpp
src/hid/page/: GenericDesktop.hpp  Keyboard.hpp  Ordinal.hpp
src/hid/report_descriptor/: helpers.hpp  item.hpp  parser.hpp  tag.hpp
tests/: CMakeLists.txt  test_proxy.cpp  test_report_data_access.cpp  test_report_descriptors.cpp  test_report_primitives.cpp
